# client-server

http/: CMakeLists.txt
http/client/: CMakeLists.txt  client.cpp
http/server/: CMakeLists.txt  server.cpp
https/: CMakeLists.txt  server-certificate.pem  server-private-key.pem  server-public-key.pem
https/client/: CMakeLists.txt  client.cpp
https/server/: CMakeLists.txt  server.cpp
